[gd_scene load_steps=3 format=3 uid="uid://do2e2qdao0f7w"]

[ext_resource type="Script" uid="uid://dlo46v0c8qjv1" path="res://scenes/ui/GuildScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="GuildScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="TopPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="TopPanel"]
layout_mode = 2

[node name="GuildName" type="Label" parent="TopPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Guild Name"

[node name="Level" type="Label" parent="TopPanel/HBox"]
layout_mode = 2
text = "Lv. 1"

[node name="Members" type="Label" parent="TopPanel/HBox"]
layout_mode = 2
text = "0/50 Members"

[node name="Power" type="Label" parent="TopPanel/HBox"]
layout_mode = 2
text = "Power: 0"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 120.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Members" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Members"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Members/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Treasury" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="GoldAmount" type="Label" parent="TabContainer/Treasury"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "0 Gold"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="TabContainer/Treasury"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="DonateAmountSpinBox" type="SpinBox" parent="TabContainer/Treasury"]
layout_mode = 2
min_value = 1.0
max_value = 1000000.0
value = 100.0

[node name="DonateButton" type="Button" parent="TabContainer/Treasury"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "ðŸ’° BaÄŸÄ±ÅŸ Yap"

[node name="Spacer2" type="Control" parent="TabContainer/Treasury"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="WithdrawButton" type="Button" parent="TabContainer/Treasury"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "ðŸ’¸ Para Ã‡ek"

[node name="Wars" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="TabContainer/Wars"]
layout_mode = 2
text = "Lonca SavaÅŸlarÄ± (YakÄ±nda)"
horizontal_alignment = 1

[node name="Chat" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Label" type="Label" parent="TabContainer/Chat"]
layout_mode = 2
text = "Lonca Sohbeti"
horizontal_alignment = 1

[node name="BottomPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="BottomPanel"]
layout_mode = 2
text = "â—€ Geri"

[node name="Spacer" type="Control" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeaveButton" type="Button" parent="BottomPanel"]
layout_mode = 2
text = "ðŸšª Loncadan AyrÄ±l"
